--- a/index.html
+++ b/index.html
@@ -1,1 +1,192 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <title>Taekwondo</title>
+</head>
+<body>
+    <div class="main-img">
+        <!-- Start NavBar -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand p-1 logo" href="index.html">
+                LOWELL TAEKWONDO
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div style="margin-left: 15%;"></div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav font-lobster">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="abstract.html">ِAbstract<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Classes<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Stuff<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="social-links">
+                        <a href=""><img src="https://img.icons8.com/plasticine/100/000000/facebook-new.png" width="50"/></a>
+                        <a href=""><img src="https://img.icons8.com/fluent/48/000000/instagram-new.png"/></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="float-right">
+                <a href="" class="social"><img src="https://img.icons8.com/plasticine/100/000000/facebook-new.png" width="50"/></a>
+                <a href="" class="social"><img src="https://img.icons8.com/fluent/48/000000/instagram-new.png"/></a>
+            </div>
+        </nav>
+    </div>
+    <!-- End NavBar -->
+
+    <!-- Start Down Button -->
+        <div class="container d-flex justify-content-center" style="margin-top: -30px;">
+            <a style="outline: none;" id="button">
+               <img src="https://img.icons8.com/wired/64/000000/down-squared.png"/>
+            </a>
+        </div>
+    <!-- End Down Button -->
+
+    <!-- Start InfoSection -->
+    <div class="container-fluid" data-aos="fade-left" id="info">
+        <div class="container mt-3">
+            <div class="row d-flex justify-content-center">
+                <div class="col-md-5 color-yellow">
+                    <img style="width: 100%;" src="img/taekwondo.webp" alt="Woman Taekwondo">
+                </div>
+                <div class="col-md-5 text-center color-yellow">
+                    <h1 class="font-roboto mt-5" style="font-size: 30px;">LOWELL TAEKWONDO</h1>
+                    <h2 class="mt-2 text-light font-Oswald" style="font-size: 30px;"><B>ABOUT OUR TAEKWONDO SCHOOL</B></h2>
+                    <p class="font-roboto mb-3 mt-3">"Self-Defense, Respect, self-Discipline,Confidence, Leadership," Benefits for kids and adoult</p>
+                    <hr class="w-75">
+                    <p class="font-roboto mt-3">To the parents that wants their kids to stay out of trouble, do well in school and go on to do awesome things as adult Lowell Taekwando is the right place for your kids.</p>
+                </div>
+            </div>
+        </div>    
+    </div>
+    <!-- End InfoSection -->
+
+    <!-- Start Logo -->
+    <div data-aos="fade-left">
+        <svg class="mt-5" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1440 126" xml:space="preserve">
+            <path style="fill:orange;" class="main-path" d="M685.6,38.8C418.7-11.1,170.2,9.9,0,30v96h1440V30C1252.7,52.2,1010,99.4,685.6,38.8z"></path>
+        </svg>
+        <div class="d-flex upper-logo justify-content-center">
+            <div class="mt-4">
+                <p class="font-roboto">LOWELL</p>
+            </div>
+        </div>
+    </div>
+    <div data-aos="fade-right">
+        <div class="d-flex lower-logo justify-content-center">
+            <div class="mt-4">
+                <p class="font-roboto">TAEKWONDO</p>
+            </div>
+        </div>
+        <svg class="scnd-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1440 126" xml:space="preserve">
+            <path style="fill:rgb(34, 34, 34)" class="main-path" d="M685.6,38.8C418.7-11.1,170.2,9.9,0,30v96h1440V30C1252.7,52.2,1010,99.4,685.6,38.8z"></path>
+        </svg>
+    </div>
+    <!-- End Logo -->
+
+    <!-- Start About Teach -->
+    <div data-aos="fade-left">
+        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1440 126" xml:space="preserve">
+            <path style="fill:orange;" class="main-path" d="M685.6,38.8C418.7-11.1,170.2,9.9,0,30v96h1440V30C1252.7,52.2,1010,99.4,685.6,38.8z"></path>
+        </svg>
+        <div class="container-fluid" style="margin-top:-20px; background-color:orange">
+            <div class="container">
+                <div class="row d-flex justify-content-center">
+                    <div class="col-md-5 text-center bg-light">
+                        <p class="mt-5 text-warning font-Oswald" style="font-size: 30px;"><b>OUR TEACH</b></p>
+                        <p class="font-roboto mb-3 mt-4">
+                            At lowell Taekwando we will teach our students<br>to take a range of practices and techniques<br>to raise our students well-equipped for adulthood<br>and maintaining a happy healthy life.
+                        </p>
+                    </div>
+                    <div class="col-md-5">
+                        <img style="width: 100%;" src="img/taekGirl.jpg" alt="Woman Taekwondo">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <svg class="scnd-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1440 126" xml:space="preserve">
+            <path style="fill:orange" class="main-path" d="M685.6,38.8C418.7-11.1,170.2,9.9,0,30v96h1440V30C1252.7,52.2,1010,99.4,685.6,38.8z"></path>
+        </svg>
+    </div>
+    <!-- End About Teach -->
+
+    <div data-aos="fade-right" class="container-fluid mb-5 d-flex justify-content-center color-grey">
+        <div class="col-md-5 text-center">
+            <p class="mt-5 text-dark font-Oswald" style="font-size: 50px;"><b>OUR GOAL</b></p>
+            <p class="text-dark font-roboto">
+                Lowell Taekwando Goal to Raise an Adult
+            </p>
+            <img class="img-fluid" style="width: 300px;" src="img/success.png" alt="Success Image">
+        </div>
+    </div>
+
+    <!-- Site footer -->
+    <footer class="site-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-6">
+                    <h6>About</h6>
+                    <p class="text-justify">
+                        At Lowell Taekwondo It is our mission to make sure every child is successful, while developing at their own pace. We tailor our program to meet the individual needs of each child according to their personality, age and skill level. (We teach them .We work together with parents to achieve this goal, and have consistent, open communication with all of our families. We welcome and encourage you to drop by anytime to observe what we do and how we do it.
+                    </p>
+                </div>
+  
+                <div class="col-xs-6 col-md-3">
+                    <h6>Pages</h6>
+                    <ul class="footer-links">
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="abstract.html">ABSTRACT</a></li>
+                        <li><a href="">CLASSES</a></li>
+                        <li><a href="">STUFF</a></li>
+                    </ul>
+                </div>
+  
+                <div class="col-xs-6 col-md-3">
+                    <h6>Scial Media</h6>
+                    <ul class="footer-links">
+                        <li><a href="">Facebook</a></li>
+                        <li><a href="">Instagram</a></li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-sm-6 col-xs-12">
+                    <p class="copyright-text">Copyright &copy; 2017 All Rights Reserved by 
+                    <a href="#">LAWELL</a>.
+                    </p>
+                </div>
+            </div>
+        </div>
+  </footer>
+</body>
+<script>
+    $(document).ready(function(){
+        $("#button").on('click',function() {
+            $('html, body').animate({
+            'scrollTop' : $("#info").position().top
+            });
+        });
+    });
+    AOS.init();
+</script>
+</html>
