--- a/html/index.html
+++ b/html/index.html
@@ -71,8 +71,8 @@
     <!--End Main content-->
 
     <!--Back button-->
-    <div class="d-flex justify-content-center mt-5 mb-3 hidd">
-        <img class="effect" id="back" src="https://img.icons8.com/wired/64/000000/circled-left-2.png" />
+    <div class="d-flex justify-content-center hidd">
+        <img class="effect mt-5 mb-3" id="back" src="https://img.icons8.com/wired/64/000000/circled-left-2.png" />
     </div>
     <!--End Back button-->
 
