--- a/index2.html
+++ b/index2.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-    <title>CoderDocs - Bootstrap 5 Documentation Template For Software Projects</title>
+    <title>تنسيق - للأعمال الخيرية</title>
     
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bootstrap Documentation Template For Software Developers">
-    <meta name="author" content="Xiaoying Riley at 3rd Wave Media">    
-    <link rel="shortcut icon" href="favicon.ico"> 
+    <meta name="description" content="تنسيق - للإعمال الخيرية">
+    <link rel="shortcut icon" href="assets/images/logo.png"> 
     
     <!-- FontAwesome JS-->
     <script defer src="assets/fontawesome/js/all.min.js"></script>
@@ -89,4 +88,3 @@
 
 </body>
 </html> 
-
