--- a/index.html
+++ b/index.html
@@ -41,24 +41,22 @@
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse show" id="navbarNav">
+          <div class="collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active fw-bold" style="color: #d8b24f;" aria-current="page" href="#">من نحن</a>
+                <a class="nav-link active fw-bold color-gold" aria-current="page" href="index.html">الرئيسية</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active fw-bold" style="color: #d8b24f;" aria-current="page" href="#">خدماتنــا</a>
+                <a class="nav-link fw-bold color-gold" aria-current="page" href="who.html">من نحن</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active fw-bold" style="color: #d8b24f;" aria-current="page" href="#">المبادرات
-                  الحالية</a>
+                <a class="nav-link fw-bold color-gold" aria-current="page" href="#">تسجيـل</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active fw-bold" style="color: #d8b24f;" aria-current="page" href="#">الأسئـلـة
-                  الأكثـر شـيـوعًـا</a>
+                <a class="nav-link fw-bold color-gold" aria-current="page" href="#">تسجيـل دخول</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active fw-bold" style="color: #d8b24f;" aria-current="page" href="#">اتصـل بنـــا</a>
+                <a class="nav-link fw-bold color-gold" aria-current="page" href="contact.html">اتصـل بنـــا</a>
               </li>
             </ul>
           </div>
@@ -74,8 +72,7 @@
       <div class="main-text">
         <h1 class="font-cairo text-light"><span>تــنســـيــق</span> للأعمال الخيــريــة </h1>
         <p class="mt-5 text-light fw-b fs-5">
-          منظمة غير ربحية, هدفها دعم الشباب العربي في ظل الأزمات الحالية التي تمر بها الأوطان وذلك من خلال نشر المبادرات
-          وتسهيل عملية الدعم التي تقدمها الجمعيات الخيرية
+          مُبــادرة شركة سـامرف بالتعاون مع مجلس المسؤولية الاجتماعية بمحافظة ينبع
         </p>
       </div>
     </div>
@@ -84,17 +81,15 @@
   <!-- Middle section -->
   <section class="container mt-5" dir="rtl">
     <div class="row">
-      <h1 class="font-cairo text-center mb-5">نـبـــذة عـنـا</h1>
-      <div class="col-lg-6 col-sm-12 text-center">
-        <p class="font-cairo font-25">إيمانًا كاملًا منا أن الشباب السعودي قادر على التغيير,
-          قمنا بإنشاء هذا الموقع حرصًا على منح الشباب الطريقة
-          المثلى لمساعدة غيرهم.
+      <div id="middle-text" class="col-lg-6 col-sm-12 text-center pt-100">
+        <p class="font-cairo font-25">حاضنة سعودية و بيئة آمنة لدعم العمل الخيري و الإنساني لتحقيق رؤية المملكة 2030
+          بتكوين مجتمع حيوي ذو قيمٍ راسخة
           <br><br>
           بادر وكن واحدًا من رواد <span class="text-primary">تَنــســـيق</span>
           <br>
-          <span class="placeholder">الاشتراك مجاني وسيبقى مجانيًــا للأبد</span>
+          <span class="placeholder">لنشـارك الخـير..و نتشـارك الأجـر </span>
         </p>
-        <button class="btn btn-primary">سجل الان</button>
+        <button class="btn btn-primary ">سجل الان</button>
       </div>
       <div class="col-lg-6 col-sm-12">
         <img src="assets/images/ksa.png" class="img-fluid" alt="">
@@ -141,13 +136,12 @@
                 <img src="assets/images/masjid.jpg" class="img-fluid" alt="">
                 <p class="font-15 mt-3">مبادرة قام بها مجموعة من الشباب في المدينة المنورة لترميم المساجد القديمة والحرص
                   على نظافتها</p>
-                <p>تاريخ التنفيذ : <span class="text-primary fw-bold">11/10/2021</span></p>
               </div>
               <a class="card-link-mask" href="docs-page.html#section-1"></a>
             </div>
           </div>
         </div>
-  
+
         <div class="col-12 col-lg-4 py-3 testimonail_container">
           <div class="card shadow-sm">
             <div class="card-body">
@@ -157,13 +151,12 @@
               <div class="card-text text-center" dir="rtl">
                 <img src="assets/images/tree.jpg" class="img-fluid" alt="">
                 <p class="font-15 mt-3">دعمًا للبيئة السعودية, قام متطوعون بمبادرة جديدة تحت عنوان " أشجارنا "</p>
-                <p>تاريخ التنفيذ : <span class="text-primary fw-bold">21/10/2021</span></p>
               </div>
               <a class="card-link-mask" href="docs-page.html#section-1"></a>
             </div>
           </div>
         </div>
-  
+
         <div class="col-12 col-lg-4 py-3 testimonail_container">
           <div class="card shadow-sm">
             <div class="card-body">
@@ -173,7 +166,6 @@
               <div class="card-text text-center" dir="rtl">
                 <img src="assets/images/poor.jpg" class="img-fluid" alt="">
                 <p class="font-15 mt-3"> تم من خلالها التبرع لأكثر من 100 محتاج بمبالغ مالية وطرود غذائية.</p>
-                <p>تاريخ التنفيذ : <span class="text-primary fw-bold">09/11/2021</span></p>
               </div>
               <a class="card-link-mask" href="docs-page.html#section-1"></a>
             </div>
@@ -188,8 +180,8 @@
               </h5>
               <div class="card-text text-center">
                 <img src="assets/images/students.jpg" class="img-fluid" alt="">
-                <p class="font-15 mt-3">بجهود مجموعة من الجمعيات الخيرية والمتبرعين تم تأمين اللوازم المدرسية لأكثر من 2500 طالب في كافة مدارس المملكة</p>
-                <p>تاريخ التنفيذ : <span class="text-primary fw-bold">09/08/2021</span></p>
+                <p class="font-15 mt-3">بجهود مجموعة من الجمعيات الخيرية والمتبرعين تم تأمين اللوازم المدرسية لأكثر من
+                  2500 طالب في كافة مدارس المملكة</p>
               </div>
               <a class="card-link-mask" href="docs-page.html#section-1"></a>
             </div>
@@ -201,23 +193,65 @@
 
   <!-- الجمعيات الخيرية -->
   <section class="container-fluid bg-gold mt-5 p-5" dir="ltr">
-    <div class="row">
-      <h1 class="font-cairo text-center text-light mb-5">الجمعيات الخيــريــة</h1>
-      <div class="testimonial_wrapper">  
-        <div class="col-12 col-lg-4 py-3 bg-light rounded testimonail_container">
-          <img src="assets/images/logo2.png" class="img-fluid" alt="">
-        </div>
-
-        <div class="col-12 col-lg-4 py-3 bg-light rounded testimonail_container">
-          <img src="assets/images/logo3.png" class="img-fluid" alt="">
-        </div>
+    <div class="">
+      <div class="row">
+        <h1 class="font-cairo text-center text-light mb-5">الجمعيات الخيــريــة</h1>
+        <div class="testimonial_wrapper">
+          <div class="col-12 col-lg-4 py-3 testimonail_container">
+            <div class="card shadow-sm">
+              <div class="card-body">
+                <h5 class="card-title mb-3 text-center font-cairo">
+                  <span class="card-title-text">مؤسسة بيان الخيرية</span>
+                  <hr>
+                </h5>
+                <div class="card-text text-center" dir="rtl">
+                  <img src="assets/images/logo2.png" class="img-fluid" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+    
+          <div class="col-12 col-lg-4 py-3 testimonail_container">
+            <div class="card shadow-sm">
+              <div class="card-body">
+                <h5 class="card-title mb-3 text-center font-cairo">
+                  <span class="card-title-text">جمعية أبناء المساجد</span>
+                  <hr>
+                </h5>
+                <div class="card-text text-center" dir="rtl">
+                  <img src="assets/images/logo4.png" class="img-fluid" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+    
+          <div class="col-12 col-lg-4 py-3 testimonail_container">
+            <div class="card shadow-sm">
+              <div class="card-body">
+                <h5 class="card-title mb-3 text-center font-cairo">
+                  <span class="card-title-text">جمعية المحافظة على القرآن</span>
+                  <hr>
+                </h5>
+                <div class="card-text text-center" dir="rtl">
+                  <img src="assets/images/logo3.png" class="img-fluid" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
   
-        <div class="col-12 col-lg-4 py-3 bg-light rounded testimonail_container">
-          <img src="assets/images/logo4.png" class="img-fluid" alt="">
-        </div>
-
-        <div class="col-12 col-lg-4 py-3 bg-light rounded testimonail_container">
-          <img src="assets/images/logo1.png" class="img-fluid" alt="">
+          <div class="col-12 col-lg-4 py-3 testimonail_container">
+            <div class="card shadow-sm">
+              <div class="card-body">
+                <h5 class="card-title mb-3 text-center font-cairo">
+                  <span class="card-title-text">جمعية الزكاة الخيرية</span>
+                  <hr>
+                </h5>
+                <div class="card-text text-center" dir="rtl">
+                  <img src="assets/images/logo1.png" class="img-fluid" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -237,12 +271,11 @@
               </h5>
               <div class="card-text text-center" dir="rtl">
                 <img src="assets/images/logo2.png" class="img-fluid" alt="">
-                <button class="btn btn-dark">زيارة المؤسسة</button>
               </div>
             </div>
           </div>
         </div>
-  
+
         <div class="col-12 col-lg-4 py-3 testimonail_container">
           <div class="card shadow-sm">
             <div class="card-body">
@@ -252,12 +285,11 @@
               </h5>
               <div class="card-text text-center" dir="rtl">
                 <img src="assets/images/logo4.png" class="img-fluid" alt="">
-                <button class="btn btn-dark">زيارة المؤسسة</button>
               </div>
             </div>
           </div>
         </div>
-  
+
         <div class="col-12 col-lg-4 py-3 testimonail_container">
           <div class="card shadow-sm">
             <div class="card-body">
@@ -267,7 +299,6 @@
               </h5>
               <div class="card-text text-center" dir="rtl">
                 <img src="assets/images/logo3.png" class="img-fluid" alt="">
-                <button class="btn btn-dark">زيارة المؤسسة</button>
               </div>
             </div>
           </div>
@@ -282,7 +313,6 @@
               </h5>
               <div class="card-text text-center" dir="rtl">
                 <img src="assets/images/logo1.png" class="img-fluid" alt="">
-                <button class="btn btn-dark">زيارة المؤسسة</button>
               </div>
             </div>
           </div>
@@ -297,7 +327,7 @@
     <div class="container">
       <h3 class="mb-2 text-white mb-3 font-cairo">إبـدأ الآن مع تَنــســـيق</h3>
       <div class="pt-3 text-center">
-        <a class="btn btn-light" href="" dir="rtl">سجل الآن <i class="fas fa-arrow-alt-circle-right ml-2"></i></a>
+        <a class="btn btn-light" href="" dir="rtl">انضم الآن <i class="fas fa-arrow-alt-circle-right ml-2"></i></a>
       </div>
     </div>
   </section>
@@ -305,14 +335,14 @@
   <footer class="footer">
     <div class="footer-bottom text-center py-5">
       <ul class="social-list list-unstyled pb-4 mb-0">
-        <li class="list-inline-item"><a href="#"><i class="fab fa-github fa-fw"></i></a></li> 
-            <li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
-            <li class="list-inline-item"><a href="#"><i class="fab fa-slack fa-fw"></i></a></li>
-            <li class="list-inline-item"><a href="#"><i class="fab fa-product-hunt fa-fw"></i></a></li>
-            <li class="list-inline-item"><a href="#"><i class="fab fa-facebook-f fa-fw"></i></a></li>
-            <li class="list-inline-item"><a href="#"><i class="fab fa-instagram fa-fw"></i></a></li>
-        </ul>
-          <small class="copyright">جميع الحقوق محفوظة لـ <span class="text-primary">تَنــســـيق</span> - 2021</small>
+        <li class="list-inline-item"><a href="#"><i class="fab fa-github fa-fw"></i></a></li>
+        <li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
+        <li class="list-inline-item"><a href="#"><i class="fab fa-slack fa-fw"></i></a></li>
+        <li class="list-inline-item"><a href="#"><i class="fab fa-product-hunt fa-fw"></i></a></li>
+        <li class="list-inline-item"><a href="#"><i class="fab fa-facebook-f fa-fw"></i></a></li>
+        <li class="list-inline-item"><a href="#"><i class="fab fa-instagram fa-fw"></i></a></li>
+      </ul>
+      <small class="copyright">جميع الحقوق محفوظة لـ <span class="text-primary">أوهكسيــر</span> - 2021</small>
     </div>
   </footer>
 
