--- a/contact.html
+++ b/contact.html
@@ -87,10 +87,7 @@
 
         <div class="text-center py-2">
             <ul class="social-list list-unstyled pb-4 mb-0 pr-0">
-                <li class="list-inline-item"><a href="#"><i class="fab fa-github fa-fw"></i></a></li>
                 <li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
-                <li class="list-inline-item"><a href="#"><i class="fab fa-slack fa-fw"></i></a></li>
-                <li class="list-inline-item"><a href="#"><i class="fab fa-product-hunt fa-fw"></i></a></li>
                 <li class="list-inline-item"><a href="#"><i class="fab fa-facebook-f fa-fw"></i></a></li>
                 <li class="list-inline-item"><a href="#"><i class="fab fa-instagram fa-fw"></i></a></li>
             </ul>
@@ -98,7 +95,7 @@
         <hr>
         <div>
             <p class="font-25 mt-5">
-                أو يمكنكم تقديم ملاحظاتكم عن طريق النموذج أدناه
+                أو يمكنكم تقديم ملاحظاتكم عبر النموذج أدناه
             </p>
 
             <div class="row d-flex justify-content-center mt-3 mb-5">
@@ -128,10 +125,7 @@
     <footer class="footer">
         <div class="footer-bottom text-center py-5">
             <ul class="social-list list-unstyled pb-4 mb-0">
-                <li class="list-inline-item"><a href="#"><i class="fab fa-github fa-fw"></i></a></li>
                 <li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
-                <li class="list-inline-item"><a href="#"><i class="fab fa-slack fa-fw"></i></a></li>
-                <li class="list-inline-item"><a href="#"><i class="fab fa-product-hunt fa-fw"></i></a></li>
                 <li class="list-inline-item"><a href="#"><i class="fab fa-facebook-f fa-fw"></i></a></li>
                 <li class="list-inline-item"><a href="#"><i class="fab fa-instagram fa-fw"></i></a></li>
             </ul>
