--- a/who.html
+++ b/who.html
@@ -86,8 +86,70 @@
         </p>
 
         <div class="img mb-5">
-            <img src="assets/images/who.svg" class="img-fluid" style="width: 75%;" alt="">
+            <img src="assets/images/who.svg" class="img-fluid" style="width: 50%" alt="">
         </div>
+        <hr>
+    </section>
+    
+    <section class="container text-center mt-4 mb-3" dir="rtl">
+      <p class="font-25">
+        خدمـــات <span class="text-primary fw-bold">تَنــســـيق</span>
+      </p>
+      <div class="row text-center mt-4 d-flex justify-content-center">
+        <div class="col-lg-3 col-sm-12 bg-light mb-4">
+          <p class="number rounded bg-primary">1</p>
+          <img src="assets/images/eyes.svg" class="mb-4" style="width: 20%;" alt="">
+          <p class="font-20 font-cairo">الإضطلاع على أحدث المبادرات الخيرية</p>
+        </div>
+
+        <div class="col-lg-2 col-sm-12 bg-light mb-4 me-2 ms-2">
+          <p class="number rounded bg-primary">2</p>
+          <img src="assets/images/map.svg" class="mb-4" style="width: 32%;" alt="">
+          <p class="font-20 font-cairo">التتبع الكامل لمراحل المبادرة</p>
+        </div>
+
+        <div class="col-lg-3 col-sm-12 bg-light mb-4 ms-2">
+          <p class="number rounded bg-primary">3</p>
+          <img src="assets/images/gift.svg" class="mb-4" style="width: 20%;" alt="">
+          <p class="font-20 font-cairo">تقديم المساعدة اللازمة لمحتاجيها</p>
+        </div>
+
+        <div class="col-lg-3 col-sm-12 bg-light">
+          <p class="number rounded bg-primary">4</p>
+          <img src="assets/images/create.svg" class="mb-4" style="width: 30%;" alt="">
+          <p class="font-20 font-cairo">إنشاء المبادرات وعرضها للناس</p>
+        </div>
+      </div>
+      <hr>
+    </section>
+
+    <section class="container text-center mt-4 mb-3" dir="rtl">
+      <p class="font-25">
+        لماذا <span class="text-primary fw-bold">تَنــســـيق</span> ؟
+      </p>
+
+      <div class="row d-flex justify-content-center mt-4">
+        <div class="col-lg-4 col-sm-12">
+          <div class="bg-light border border-1 border-bottom-0 rounded">
+            <img src="assets/images/secure.svg" class="img-fluid mb-2" width="150" alt="">
+            <p class="font-25 number p-1">ســريّــة المعلومات</p>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-sm-12">
+          <div class="bg-light border border-1 border-bottom-0 rounded">
+            <img src="assets/images/service.svg" class="img-fluid mb-2" width="150" alt="">
+            <p class="font-25 number p-1 bg-primary">خـدمـة دائــمــة</p>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-sm-12">
+          <div class="bg-light border border-1 border-bottom-0 rounded">
+            <img src="assets/images/chart.svg" class="img-fluid mb-2" width="150" alt="">
+            <p class="font-25 number p-1">لوحــة تحكم متكاملة</p>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="cta-section text-center py-5 theme-bg-dark position-relative">
@@ -105,10 +167,7 @@
     <footer class="footer">
         <div class="footer-bottom text-center py-5">
             <ul class="social-list list-unstyled pb-4 mb-0">
-                <li class="list-inline-item"><a href="#"><i class="fab fa-github fa-fw"></i></a></li>
                 <li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
-                <li class="list-inline-item"><a href="#"><i class="fab fa-slack fa-fw"></i></a></li>
-                <li class="list-inline-item"><a href="#"><i class="fab fa-product-hunt fa-fw"></i></a></li>
                 <li class="list-inline-item"><a href="#"><i class="fab fa-facebook-f fa-fw"></i></a></li>
                 <li class="list-inline-item"><a href="#"><i class="fab fa-instagram fa-fw"></i></a></li>
             </ul>
